feat: basic controllers and views for products

--- a/VendasSystem/Views/Shared/_Layout.cshtml
+++ b/VendasSystem/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -24,6 +24,27 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+
+                        @* My routes *@
+
+                        <li class="nav-item">
+                            <a class="nav-link active text-light" asp-area="" asp-controller="Marca"
+                                asp-action="Index">Novo Pedido</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Marca"
+                                asp-action="Index">Marcas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Produto"
+                                asp-action="Index">Produtos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Transportadora"
+                                asp-action="Index">Transportadoras</a>
+                        </li>
+
+                        @* End my routes *@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home"
                                 asp-action="Privacy">Privacy</a>
