feat: add marca field on produto list and form

--- a/VendasSystem/Views/Produto/Create.cshtml
+++ b/VendasSystem/Views/Produto/Create.cshtml
@@ -1,4 +1,4 @@
-@model VendasSystem.Models.Produto
+@model VendasSystem.ViewModels.ProdutoCreateEdit
 
 @{
     ViewData["Title"] = "Create";
@@ -37,4 +37,3 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-
