--- a/VendasSystem/Views/Produto/Edit.cshtml
+++ b/VendasSystem/Views/Produto/Edit.cshtml
@@ -1,9 +1,8 @@
-@model VendasSystem.Models.Produto
+@model VendasSystem.ViewModels.ProdutoCreateEdit
 
 @{
     ViewData["Title"] = "Edit";
 }
-
 <h1>Edit</h1>
 
 <h4>Produto</h4>
@@ -29,6 +28,11 @@
                 <span asp-validation-for="Preco" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Marca" class="control-label"></label>
+                <select asp-for="Marca" asp-items="Model.MarcasItems" class="form-control" />
+                <span asp-validation-for="Marca" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
@@ -38,4 +42,3 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-
