--- a/VendasSystem/Views/Produto/Index.cshtml
+++ b/VendasSystem/Views/Produto/Index.cshtml
@@ -21,27 +21,34 @@
             <th>
                 @Html.DisplayNameFor(model => model.Preco)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Marca)
+            </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nome)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Descricao)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Preco)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Nome)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Descricao)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Preco)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Marca.Nome)
+                </td>
+                <td>
+                    <a class="badge text-bg-secondary" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                    <a class="badge text-bg-secondary" asp-action="Details" asp-route-id="@item.Id">Details</a>
+                    <a class="badge text-bg-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
