--- a/VendasSystem/Views/Produto/Create.cshtml
+++ b/VendasSystem/Views/Produto/Create.cshtml
@@ -28,6 +28,11 @@
                 <span asp-validation-for="Preco" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Marca" class="control-label"></label>
+                <select asp-for="MarcaId" class="form-control" asp-items="Model.MarcasDisponiveis"></select>
+                <span asp-validation-for="Marca" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
