--- a/VendasSystem/Views/Produto/Edit.cshtml
+++ b/VendasSystem/Views/Produto/Edit.cshtml
@@ -29,8 +29,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="Marca" class="control-label"></label>
-                <select asp-for="Marca" asp-items="Model.MarcasItems" class="form-control" />
-                <span asp-validation-for="Marca" class="text-danger"></span>
+                <select asp-for="MarcaId" class="form-control" asp-items="Model.MarcasDisponiveis"></select>
+                <span asp-validation-for="MarcaId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
