--- a/VendasSystem/Views/Shared/_Layout.cshtml
+++ b/VendasSystem/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -47,6 +47,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Cliente"
                                 asp-action="Index">Clientes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Vendedor"
+                                asp-action="Index">Vendedores</a>
                         </li>
 
                         @* End my routes *@
