feat: add operations

--- a/VendasSystem/Views/Shared/_Layout.cshtml
+++ b/VendasSystem/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -29,8 +29,12 @@
                         @* My routes *@
 
                         <li class="nav-item">
-                            <a class="nav-link active text-light" asp-area="" asp-controller="Marca"
-                                asp-action="Index">Novo Pedido</a>
+                            <a class="nav-link active text-light" asp-area="" asp-controller="NotaDeVenda"
+                                asp-action="Create">Novo Pedido</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="NotaDeVenda"
+                                asp-action="Index">Vendas</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Marca"
